--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,14 @@
-name: learn-github-actions
+name: learn-github-actions-python
 on: 
   [workflow_dispatch]
 jobs:
-  check-bats-version:
+  check-python-version:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up python
       - uses: actions/setup-python@v3
         with:
-          python-version: '3.x'
+          python-version: '3.6'
       - name: Display Python version
       - run: python --version
