--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,11 @@
-name: learn-github-actions-python
-on: 
-  [workflow_dispatch]
+name: learn-github-actions
+on: [workflow_dispatch]
 jobs:
   check-python-version:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up python
       - uses: actions/setup-python@v3
         with:
-          python-version: '3.6'
-      - name: Display Python version
+          node-version: '3.6'
       - run: python --version
