--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,5 +10,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          node-version: '3.6'
-      - run: python --version
+          python-version: '3.6'
+      - name: Python version
+        run: python --version
+      - name: Run python Script
+        run : |
+            cd test 
+            python firstfile.py
