--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,5 @@ jobs:
       - name: Run python Script
         run: |
           cd test 
+          chmod +x firstfile.py
           python firstfile.py
