--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,10 @@
 name: learn-github-actions
-on: [workflow_dispatch]
+on: 
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
 jobs:
   check-python-version:
     strategy:
@@ -13,7 +18,3 @@ jobs:
           python-version: '3.6'
       - name: Python version
         run: python --version
-      - name: Run python Script
-        run: |
-          cd test 
-          python firstfile.py
