--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,14 +3,11 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - master
   pull_request:
 jobs:
   check-python-version:
-    strategy:
-      matrix:
-        os: [ubuntu-latest,macos-latest,windows-latest]
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
