--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,10 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - main
   pull_request:
+  paths-ignore:
+    - 'README.md'
 jobs:
   check-python-version:
     runs-on: ubuntu-latest
