--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,11 @@
 name: learn-github-actions
 on: 
   workflow_dispatch:
+  push:
+    branches:
+      - master
+    paths-ignore:
+    - 'README.md'
 jobs:
   check-python-version:
     runs-on: ubuntu-latest
@@ -11,5 +16,3 @@ jobs:
           python-version: '3.6'
       - name: Python version
         run: python --version
-      - name: Run script
-        run: python main.py
