--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,16 +5,29 @@ on:
   # Triggers the workflow every 1 minutes
   schedule:
     - cron: "*/1 * * * *"
-
+    
+  workflow_dispatch:
+defaults:
+  run:
+    shell: pwsh
      # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "cron"
   cron:
     # The type of runner that the job will run on
-    runs-on: self-hosted
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+        
+      - name: print present directory with linux
+        run: pwd
+        continue-on-error: true
+        
+      - name: print present directory with windows
+        run: cd
+       
+
