--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,10 @@ jobs:
         run: echo Hello, world!
         
       - name: print present directory with linux
-        run: pwd
+        run: infconfig
         continue-on-error: true
         
       - name: print present directory with windows
-        run: cd
+        run: ipconfig
        
 
