--- a/.github/workflows/self.yml
+++ b/.github/workflows/self.yml
@@ -20,6 +20,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: '3.7'
+          python-version: '3.7.*'
       - name: python version
         run: python --version
