--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ name: First Cron Job
 on:
   # Triggers the workflow every 1 minutes
   schedule:
-    - cron: "*/1 * * * *"
+    - cron: "*/5 * * * *"
     
   workflow_dispatch:
 defaults:
@@ -23,11 +23,11 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
         
-      - name: print present directory with linux
-        run: ifconfig
-        continue-on-error: true
+#       - name: print present directory with linux
+#         run: ifconfig
+#         continue-on-error: true
         
-      - name: print present directory with windows
-        run: ipconfig
+#       - name: print present directory with windows
+#         run: ipconfig
        
 
