--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,8 @@ jobs:
   # This workflow contains a single job called "cron"
   cron:
     # The type of runner that the job will run on
-#     runs-on: windows-latest
-    runs-on: self-hosted
+    runs-on: windows-latest
+#     runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -24,11 +24,11 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
         
-#       - name: print present directory with linux
-#         run: ifconfig
-#         continue-on-error: true
+      - name: print...
+        run: ifconfig
+        continue-on-error: true
         
-#       - name: print present directory with windows
-#         run: ipconfig
+      - name: print ....
+        run: ipconfig
        
 
