--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,8 @@ name: First Cron Job
        # Controls when the workflow will run
 on:
   # Triggers the workflow every 1 minutes
-  schedule:
-    - cron: "*/5 * * * *"
+#   schedule:
+#     - cron: "*/5 * * * *"
     
   workflow_dispatch:
 defaults:
