--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,6 +13,10 @@ jobs:
         - 80
       volumes:
         - my_docker_volume:/volume_mount
+    services:
+      image: python:latest
     steps:
         - name: check node version
           run: node -v
+        - name: check python version
+          run: python --version
