--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -6,7 +6,7 @@ jobs:
    my_job:
     runs-on: ubuntu-latest
     container:
-      image: node:14.16
+      image: python:3.10.4
       env:
         NODE_ENV: development
       ports:
@@ -14,7 +14,7 @@ jobs:
       volumes:
         - my_docker_volume:/volume_mount
     steps:
-        - name: check node version
-          run: node -v
+#         - name: check node version
+#           run: node -v
         - name: check python version
           run: python --version
