--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch: null
 jobs:
   my_job:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     container:
       image: 'python:3.10.4'
       env:
@@ -16,7 +16,7 @@ jobs:
       - name: check python version
         run: python --version
   runner_job:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: check python version in runner
         run: python --version
