--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,34 +1,33 @@
-name: First Cron Job
-
-       # Controls when the workflow will run
+name: 'Create SNS topic'
 on:
-  # Triggers the workflow every 1 minutes
-#   schedule:
-#     - cron: "*/5 * * * *"
-    
   workflow_dispatch:
+
 defaults:
   run:
-    shell: pwsh
-     # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "cron"
-  cron:
-    # The type of runner that the job will run on
-    runs-on: windows-latest
-#     runs-on: self-hosted
+    shell: bash
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+jobs:  
+  sns_topics:
+    name: 'create sns topic'
+    runs-on: ubuntu-latest
+
     steps:
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-        
-      - name: print...
-        run: ifconfig
-        continue-on-error: true
-        
-      - name: print ....
-        run: ipconfig
-       
+    
+    - name: Checkout
+      uses: actions/checkout@v2
 
+    - name: Configure AWS credentials from Test account
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.CSSP_AWS_GITHUB_030462125157_PROD_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.CSSP_AWS_GITHUB_030462125157_PROD_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Create SNS topic
+      id: sns_topic_arn1
+      run:  |
+        topic_arn=$(aws sns create-topic --name cssp-idle-resource-sns-topic  -output text)
+        echo "::set-output name=topic_arn::$topic_arn"
+
+    - name: Subscribe to SNS topic
+      run:  echo ${{ steps.sns_topic_arn.outputs.topic_arn }}
